<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="2"
        android:title="@string/privacy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_myprofile"
        android:orderInCategory="1"
        android:title="@string/myprofile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="4"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="5"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>