<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oanabalaita.oana_maria.erasmuscom2.ui.fragments.PersonalProfileFragment"
    android:background="#dbdbdb">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#dbdbdb"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">


            <LinearLayout
                android:id="@+id/box"
                android:layout_width="match_parent"
                android:layout_height="120sp"
                android:alpha="0.99"
                android:background="@drawable/pic1"
                android:orientation="vertical" >

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageViewPicture"
                android:layout_width="210sp"
                android:layout_height="210sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:src="@drawable/profile_other"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp" />


            <EditText
                android:id="@+id/edit_text_nameAndSurname"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_below="@+id/imageViewPicture"

                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_min"
                android:layout_marginRight="@dimen/margin_min"

                android:backgroundTint="@color/blue_grey_500"
                android:hint="@string/nameAndSurname"
                android:inputType="text"
                android:paddingLeft="@dimen/margin_min"
                android:paddingRight="@dimen/margin_min"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_nameAndSurname"
                android:layout_centerHorizontal="true"

                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/linearLayout2"
                android:weightSum="1">
                <TextView

                    android:id="@+id/textInfos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"

                    android:text="@string/titleinsert" />

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#4795c4c7">

                    <EditText

                        android:id="@+id/edit_text_university"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/university"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#4795c4c7">


                    <EditText
                        android:id="@+id/edit_text_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/city"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#4795c4c7">

                    <EditText
                        android:id="@+id/edit_text_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/country"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:paddingTop="3dp"
                    android:paddingBottom="10dp"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_cancel"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"

                        android:background="#73828a"
                        android:textColor="@android:color/white"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_save"
                        android:background="#73828a"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        style="@style/Widget.AppCompat.Button.Borderless"


                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

            </LinearLayout>



        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
